src/objects/ShowpadForSF__Showpad_Content_View__c.object
<CustomObject>
    <description>A content view by a contact/lead in a Showpad Activity.</description>
    <fields>
        <fullName>ShowpadForSF__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Showpad Content Views</relationshipLabel>
        <relationshipName>Showpad_Content_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Showpad Content Views</relationshipLabel>
        <relationshipName>Showpad_Content_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Showpad_Activity_Item__c</fullName>
        <label>Showpad Activity Item</label>
        <referenceTo>ShowpadForSF__Showpad_Activity_Item__c</referenceTo>
        <relationshipLabel>Showpad Content Views</relationshipLabel>
        <relationshipName>Showpad_Content_Views</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Showpad_ID__c</fullName>
        <externalId>true</externalId>
        <label>Showpad ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Time_Spent__c</fullName>
        <description>The amount of time spent in seconds, viewing this piece of content.</description>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__View_Time__c</fullName>
        <label>View Time</label>
        <type>DateTime</type>
    </fields>
    <label>Showpad Content View</label>
    <listViews>
        <fullName>ShowpadForSF__All</fullName>
        <columns>NAME</columns>
        <columns>ShowpadForSF__Showpad_ID__c</columns>
        <columns>ShowpadForSF__Showpad_Activity_Item__c</columns>
        <columns>ShowpadForSF__Time_Spent__c</columns>
        <columns>ShowpadForSF__View_Time__c</columns>
        <columns>ShowpadForSF__Contact__c</columns>
        <columns>ShowpadForSF__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Showpad Content View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showpad Content Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>